[package]
authors = ["layen-king <446495695@qq.com>"]
edition = "2018"
name = "http"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bufstream = "0.1.4"
lazy_static = "1.4.0"
once_cell = "1.7.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
tokio = { version = "1.6.1", features = ["full"] }
anyhow = "1.0.40"
thiserror="1.0.25"
