[package]
authors = ["layen-king <446495695@qq.com>"]
edition = "2018"
name = "http"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bufstream = "0.1.4"
lazy_static = "1.4.0"
leetcode = {path = "leetcode"}
mime_types = {path = "mime_types"}
event_emiter = {path = "event_emiter"}
once_cell = "1.7.2"
rand = "0.8.3"
regex = "1.5.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
thiserror = "1.0.25"
tokio = {version = "1.6.1", features = ["full"]}
